# SAM

./: .dockerignore  .env.example  .gitignore  README.md  render.yaml
client/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
client/src/brand/: brand.ts
client/src/components/: AuraCanvas.tsx  AuraVisualizer.tsx  BrandIntro.tsx  BrandPreview.tsx  CandleFlame.tsx  LatencyHUD.tsx  MicButton.tsx  SamAvatar.tsx  Simulator.tsx  TierBadge.tsx  VoicePortal.tsx
client/src/tier/: types.ts  (+4 more)
deploy/: Dockerfile  README.md
scripts/: deploy-phase0.ps1  deploy-sam-portal-render.ps1
worker/: .env.example  README.md  _envcheck.py  pyproject.toml  requirements.txt
worker/sam_worker/: __init__.py  __main__.py  agent.py  brain.py  config.py  harness.py  latency.py  mock_loop.py  owner_gate.py  personas.py  stt.py  tier.py  tts.py  voice_verify.py
worker/sam_worker/bench/: README.md  __init__.py  bench_config.json  fixtures.py  latency_profile.py  scorecard.py
worker/sam_worker/prompts/: samuel_canon.txt
worker/sam_worker/skillbuilder/: __init__.py  character_sheet.py  models.py  registry.py  scoring.py  states.py
worker/sam_worker/tools/: __init__.py  handlers.py  rainmaker.py
worker/scripts/: enroll_owner_voice.py
worker/server/: __init__.py  token_server.py
worker/tests/: test_bench_scorecard.py  test_integration_prod.py  test_latency_profile.py  test_rainmaker_client.py  test_rainmaker_tools.py  test_skillbuilder.py  test_tier_map.py  test_token_access.py  test_voice_verify.py
(+17 files in other folders)
